# comment-category-prediction-challenge

./: .gitignore  LICENSE  README.md  pyproject.toml
summary_reports/final/: training_metrics.csv  validation_metrics.csv
summary_reports/v0/: v0_01_linear.csv  v0_02_tree.csv
